--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+.shadow:hover{
+  box-shadow: 4px 4px 15px #f62c7326
+}
+.bottom-top{
+  box-shadow: 0px 15px 10px -15px #a8a5a5;   
+}
+
+/* Slider styles */
+
+
+/* Animation for the slider */
+
