--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar{
+  width: 6px;
+}
+::-webkit-scrollbar-track{
+  background-color: #000;
+}
+::-webkit-scrollbar-thumb{
+  background: #f72d74;
+}
+
+
+
 .shadow:hover{
   box-shadow: 4px 4px 15px #f62c7326
 }
-.bottom-top{
-  box-shadow: 0px 15px 10px -15px #a8a5a5;   
-}
+.bottom-top:hover{
+  box-shadow: 2px 0px 51px -22px #f72d74;}
 
 /* Slider styles */
 
 
 /* Animation for the slider */
 
+
+
+
+.carousel .control-arrow {
+  display: none !important; /* Ensures arrows are not visible */
+}
