--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,13 @@
 /* Animation for the slider */
 
 
-
+.btn{
+  height: 30px;
+  width: 25px;
+  accent-color:#616fed;
+  border: none;
+  
+}
 
 .carousel .control-arrow {
   display: none !important; /* Ensures arrows are not visible */
@@ -35,4 +41,11 @@
 
 .box{
   box-shadow: 0px 10px 15px -3px rgb(222,222,222);
+}
+
+@media  (max-width: 575px){
+  .input{
+    grid-column-start: span 2;
+    grid-column-end: span 2;
+  }
 }
