--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
 
 
 .box{
-  box-shadow: 0px 10px 15px -3px rgb(222,222,222);
+  box-shadow: 20px 10px 15px -3px rgb(222,222,222);
 }
 
 @media  (max-width: 575px){
@@ -48,4 +48,22 @@
     grid-column-start: span 2;
     grid-column-end: span 2;
   }
+}
+
+.box-shadow{
+  box-shadow: 0px 0px 8px 5px rgba(17,17,17,0.15)
+
+
+}
+
+.my-vertical-slider {
+  max-width: 200px; /* Set the width of the slider */
+  margin: 0 auto;   /* Center the slider */
+}
+
+.my-vertical-slider .splide__slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
