--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,9 @@
   justify-content: center;
   height: 100%;
 }
+
+.top{
+  -webkit-box-shadow: 0px -8px 16px -7px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px -8px 16px -7px rgba(0,0,0,0.75);
+box-shadow: 0px -8px 16px -7px rgba(0,0,0,0.75);
+}
